[tool.poetry]
name = "RAID"
version = "0.1.4"
description = "The Ultimate Recon and Exploitation Toolkit"
authors = ["RaidTheWeb <therealraidtheweb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansicolors = "^1.1"
scapy = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"